# devops-bench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.harness  README.md  copy.bara.sky  migrated.bara.sky  pyproject.toml
.agents/references/: harness-capabilities.md  monitoring-and-recovery.md  running-evals.md  unlimited-mode.md
.claude/skills/: migration-prep
.github/workflows/: backsync.yml  legacy-guard.yml  suggest-flips.yml
complextasks/migration-and-upgrade/: README.md  task.yaml
complextasks/optimize-scale/: task.yaml
complextasks/secret-rotation/: README.md  agent-rules.md  task.yaml
deployers/: factory.py
deployers/gcp/: variables.py
devops_bench/: AGENTS.md  __init__.py  __main__.py  cli.py  run.py
devops_bench/agents/: __init__.py  base.py  config.py  result.py
devops_bench/chaos/: __init__.py  agent.py  base.py  registry.py  schema.py  spec.py
devops_bench/core/: __init__.py  config.py  context.py  errors.py  logging.py  registry.py  results.py  subprocess.py
devops_bench/deployers/: __init__.py  base.py  factory.py  gcp.py  kind.py  noop.py  tofu.py
devops_bench/evalharness/: __init__.py  default.py  scenario.py
devops_bench/harness/: __init__.py  artifacts.py  base.py  default.py  reporter.py  scenario.py
devops_bench/k8s/: __init__.py  conditions.py  kubectl.py
devops_bench/metrics/: __init__.py  _skills.py  base.py  chaos_metrics.py  checklist.py  geval.py  grounding.py  outcome_validity.py  pipeline.py  tool_invocation.py
devops_bench/models/: __init__.py  anthropic.py  base.py  claude.py  gemini.py  google.py  loop.py  ollama.py
devops_bench/providers/: __init__.py  base.py  gcp.py  kind.py
devops_bench/results/: normalize.py
devops_bench/skills/: __init__.py  outcome-validity-checklist.md  tool-invocation-skill.md
devops_bench/tasks/: __init__.py  loader.py  registry.py  schema.py
devops_bench/verification/: __init__.py  base.py  registry.py  runner.py  schema.py  spec.py
docs/: bastion.md  getting-started.md  interfaces.md  master_review_report.md  parallel-evals.md
docs/components/: agents.md
docs/how-to/: add-a-task.md  run-evals.md
docs/migration/: README.md  pr-plan.md
hack/: backsync.sh  check-legacy-readonly.sh  migration-status.sh  prep-export.sh
scripts/: compare_legacy_vs_refactor.sh  compare_results.py  entrypoint_harness.sh  mock_ollama_server.py  run_compare.sh  run_ollama_e2e_test.sh  setup_gke_mcp.sh  setup_local_env.sh
site_new/: AGENTS.md
tasks/: AGENTS.md
tests/: test_gcp_deployer.py
(+224 files in other folders)
