# Copyright 2026 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-bench"
dynamic = ["version"]
description = "A standardized benchmarking suite to evaluate DevOps agents and models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
# Runtime dependencies, carried over from requirements.txt as minimum-version
# floors (>=, like upstream) rather than exact pins; uv.lock pins the resolution.
dependencies = [
    "deepeval>=4.0.3",
    "google-genai>=2.6.0",
    "mcp>=1.27.1",
    "anthropic>=0.104.1",
    "pyyaml>=6.0.3",
]

[tool.hatch.version]
path = "devops_bench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["devops_bench"]

[dependency-groups]
# pytest-mock is carried over from requirements.txt; pytest, ruff, and
# pre-commit use the upstream floors.
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.2",
    "pre-commit>=3.5.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # ignore line-length violations (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
